Changed title, removed outdated instance of JQuery

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8" />
-<title>Untitled</title>
+<title>"Fancy Lad"</title>
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -22,7 +22,7 @@
 
 <header id="header">
 
-	<div id="logo">Site Name</div>
+	<div id="logo">Fancy Lad</div>
 	
 	<span id="main-menu-trigger"><span class="icon-menu"></span></span>
 	<nav id="main-menu"> 
@@ -200,7 +200,6 @@
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-<!-- <script src="assets/javascript/jquery/jquery-2.1.3.min.js"></script> -->
 
 <script>
 function equalHeight(group) {
