--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/2.1.3/normalize.min.css" rel="stylesheet" media="all">
 
 <!-- global site styles -->
-<link rel="stylesheet" href="assets/fonts/entypo-custom/css/entypo.css">
-<link rel="stylesheet" href="assets/styles/global.css">
+<link rel="stylesheet" href="./assets/fonts/entypo-custom/css/entypo.css">
+<link rel="stylesheet" href="./assets/styles/global.css">
 
 <!--[if lt IE 9]>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7/html5shiv.min.js"></script>
@@ -41,7 +41,7 @@
 
 <!-- Main content here -->
 
-	<div class="row short">
+	<div class="row equal-height short">
 		
 		<div class="column">
 			<div class="column-content">
@@ -64,8 +64,20 @@
 			
 			</div> <!-- .column-content -->	
 		</div> <!-- .column -->
+
+		<div class="column">
+			<div class="column-content">
+
+				<h1>Heading</h1>
+			
+				<p>
+				Antehabeo commoveo ne suscipere ulciscor minim et aliquip. Importunus bis hendrerit epulae minim facilisis at roto wisi, abluo eu usitas, gravis volutpat. Praemitto distineo foras volutpat sagaciter singularis quidem, et iaceo hendrerit. 
+				</p>
+			
+			</div> <!-- .column-content -->	
+		</div> <!-- .column -->
 		
-		<div class="column span2">
+		<div class="column">
 			<div class="column-content">
 
 				<h1>Heading</h1>
@@ -199,7 +211,7 @@
 
 
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 
 <script>
 function equalHeight(group) {
