--- a/index.html
+++ b/index.html
@@ -159,9 +159,9 @@
 	
 		<div class="column no-style">
 			<div class="column-content">
-				<h1>Mistake</h1>
+				<h1>About this site</h1>
 			
-				<p>Another mistake. 
+				<p>
 				Antehabeo commoveo ne suscipere ulciscor minim et aliquip. Importunus bis hendrerit epulae minim facilisis at roto wisi, abluo eu usitas, gravis volutpat. Praemitto distineo foras volutpat sagaciter singularis quidem, et iaceo hendrerit.
 				</p>
 			
@@ -171,7 +171,7 @@
 		<div class="column no-style">
 			<div class="column-content">
 			
-				<p>Yet another mistake. 
+				<p>
 				Antehabeo commoveo ne suscipere ulciscor minim et aliquip. Importunus bis hendrerit epulae minim facilisis at roto wisi, abluo eu usitas, gravis volutpat. Praemitto distineo foras volutpat sagaciter singularis quidem, et iaceo hendrerit.
 				</p>
 			
